--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>1.6.0.Beta1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.4</version>
+        </dependency>
     </dependencies>
 
     <build>
