--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=x.backend
+server.error.include-message=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/xclone-backend-db?user=postgres&password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
